--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         Message: <input type="text" name="message">
         <input type="submit" value="submit">
     </form>
-    <p>2024 CodeSpace Cat.</p>
+    <p>2024 CodeSpace Cat. All rights reserved.</p>
 </body>
 </html>
