--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
          </tr>
     <h2>Contact Me</h2>
     <form>
+        <table>
         Name: <input type="text" name="name">
         Email: <input type="text" name="email">
         Message: <input type="text" name="message">
         <input type="submit" value="submit">
     </form>
+    </table>
     <p>2024 CodeSpace Cat. All rights reserved.</p>
 </body>
 </html>
