--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
          </tr>
         <table>
     <h2>Contact Me</h2>
-    <form>
+    <footer>
         Name: <input type="text" name="name">
         Email: <input type="text" name="email">
         Message: <input type="text" name="message">
         <input type="submit" value="submit">
-    </form>
+    </footer>
     <p>2024 CodeSpace Cat. All rights reserved.</p>
         </table>
 </body>
 </html>
+
 
 
